--- a/index.html
+++ b/index.html
@@ -2,192 +2,460 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Job Listings</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  <!-- Item Start -->
-  Photosnap
-  New!
-  Featured
-  Senior Frontend Developer
-  1d ago
-  Full Time
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Senior
-  <!-- Languages -->
-  HTML
-  CSS
-  JavaScript
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Manage
-  New!
-  Featured
-  Fullstack Developer
-  1d ago
-  Part Time
-  Remote
-  <!-- Role -->
-  Fullstack
-  <!-- Level -->
-  Midweight
-  <!-- Languages -->
-  Python
-  <!-- Tools -->
-  React
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Account
-  New!
-  Junior Frontend Developer
-  2d ago
-  Part Time
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  JavaScript
-  <!-- Tools -->
-  React
-  Sass
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  MyHome
-  Junior Frontend Developer
-  5d ago
-  Contract
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  CSS
-  JavaScript
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Loop Studios
-  Software Engineer
-  1w ago
-  Full Time
-  Worldwide
-  <!-- Role -->
-  Fullstack
-  <!-- Level -->
-  Midweight
-  <!-- Languages -->
-  JavaScript
-  Ruby
-  <!-- Tools -->
-  Sass
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  FaceIt
-  Junior Backend Developer
-  2w ago
-  Full Time
-  UK only
-  <!-- Role -->
-  Backend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  Ruby
-  <!-- Tools -->
-  RoR
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Shortly
-  Junior Developer
-  2w ago
-  Full Time
-  Worldwide
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  HTML
-  JavaScript
-  <!-- Tools -->
-  Sass
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Insure
-  Junior Frontend Developer
-  2w ago
-  Full Time
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  JavaScript
-  <!-- Tools -->
-  Vue
-  Sass
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Eyecam Co.
-  Full Stack Engineer
-  3w ago
-  Full Time
-  Worldwide
-  <!-- Role -->
-  Fullstack
-  <!-- Level -->
-  Midweight
-  <!-- Languages -->
-  JavaScript
-  Python
-  <!-- Tools -->
-  Django
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  The Air Filter Company
-  Front-end Dev
-  1mo ago
-  Part Time
-  Worldwide
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  JavaScript
-  <!-- Tools -->
-  React
-  Sass
-  <!-- Item End -->
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <header>
+    <svg xmlns="http://www.w3.org/2000/svg" width="1366" height="156">
+      <g fill="#63BABA" fill-rule="evenodd">
+        <path d="M470.577 563.429c-51.432-51.425-51.438-134.806-.013-186.237l.013-.013L867.235-19.424c51.441-51.434 134.836-51.434 186.276 0 48.811 48.804 51.304 126.392 7.473 178.135l178.158-178.135c51.441-51.434 134.836-51.434 186.277 0 51.431 51.424 51.437 134.805.013 186.237-.005.004-.01.008-.013.013l-396.66 396.603c-51.44 51.433-134.834 51.433-186.275 0-48.812-48.805-51.304-126.394-7.471-178.138L656.853 563.43c-51.441 51.433-134.836 51.433-186.276 0zM342.268 45.605c-51.432-51.425-51.438-134.806-.013-186.237l.013-.013 396.658-396.603c51.441-51.434 134.836-51.434 186.277 0 51.431 51.424 51.437 134.805.013 186.237-.005.004-.01.008-.013.013L528.543 45.605c-51.44 51.433-134.834 51.433-186.275 0zm-444.692 71.824c-51.432-51.424-51.438-134.806-.013-186.237l.013-.013 396.658-396.603c51.441-51.434 134.836-51.434 186.277 0 51.431 51.424 51.437 134.805.013 186.237a80.86 80.86 0 01-.013.013L83.85 117.429c-51.44 51.433-134.834 51.433-186.275 0z"/>
+      </g>
+    </svg>
+  </header>
+  <main>
+    <div class="container">
+      <div class="listing-card">
+        <div class="left-side">
+          <div class="logo">
+            <img src="images/photosnap.svg" alt="logo">
+          </div>
+          <div class="profile">
+            <div class="profile-top">
+             <div class="company-name">
+              <p>Photosnap</p>
+             </div>
+              <div class="new">
+                <p>New!</p>
+              </div>
+              <div class="featured">
+                <p>Featured</p>
+              </div>
+            </div>
+            <h3>Senior Frontend Developer</h3>
+            <div class="profile-bottom">
+              <p>1d ago</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>FullTime</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>USA only</p>
+            </div>
+          </div>
+        </div>
+        <div class="right-side">
+          <div>
+            <p>Frontend</p>
+          </div>
+          <div>
+            <p>Senior</p>
+          </div>
+          <div>
+            <p>HTML</p>
+          </div>
+          <div>
+            <p>CSS</p>
+          </div>
+          <div>
+            <p>Javascript</p>
+          </div>
+        </div>
+      </div>
+      <div class="listing-card">
+        <div class="left-side">
+          <div class="logo">
+            <img src="images/manage.svg" alt="logo">
+          </div>
+          <div class="profile">
+            <div class="profile-top">
+             <div class="company-name">
+              <p>Manage</p>
+             </div>
+              <div class="new">
+                <p>New!</p>
+              </div>
+              <div class="featured">
+                <p>Featured</p>
+              </div>
+            </div>
+            <h3>Fullstack</h3>
+            <div class="profile-bottom">
+              <p>1d ago</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>Part Time</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>Remote</p>
+            </div>
+          </div>
+        </div>
+        <div class="right-side">
+          <div id="role">
+            <p>Fullstack</p>
+          </div>
+          <div id="level">
+            <p>Midweight</p>
+          </div>
+          <div>
+            <p>Python</p>
+          </div>
+          <div>
+            <p>React</p>
+          </div>
+        </div>
+      </div>
+      <div class="listing-card2">
+        <div class="left-side">
+          <div class="logo">
+            <img src="images/account.svg" alt="logo">
+          </div>
+          <div class="profile">
+            <div class="profile-top">
+             <div class="company-name">
+              <p>Account</p>
+             </div>
+              <div class="new">
+                <p>New!</p>
+              </div>
+            </div>
+            <h3>Junior Frontend Developer</h3>
+            <div class="profile-bottom">
+              <p>2d ago</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>Part Time</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>USA only</p>
+            </div>
+          </div>
+        </div>
+        <div class="right-side">
+          <div>
+            <p>Frontend</p>
+          </div>
+          <div>
+            <p>Junior</p>
+          </div>
+          <div>
+            <p>React</p>
+          </div>
+          <div>
+            <p>Sass</p>
+          </div>
+          <div>
+            <p>Javascript</p>
+          </div>
+        </div>
+      </div>
+      <div class="listing-card2">
+        <div class="left-side">
+          <div class="logo">
+            <img src="images/myhome.svg" alt="logo">
+          </div>
+          <div class="profile">
+            <div class="profile-top">
+             <div class="company-name">
+              <p>myHome</p>
+             </div>
+            </div>
+            <h3>Senior Frontend Developer</h3>
+            <div class="profile-bottom">
+              <p>5d ago</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>Contract</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>USA only</p>
+            </div>
+          </div>
+        </div>
+        <div class="right-side">
+          <div id="role">
+            <p>Frontend</p>
+          </div>
+          <div id="level">
+            <p>Junior</p>
+          </div>
+          <div>
+            <p>CSS</p>
+          </div>
+          <div>
+            <p>Javascript</p>
+          </div>
+        </div>
+      </div>
+      <div class="listing-card2">
+        <div class="left-side">
+          <div class="logo">
+            <img src="images/loop-studios.svg" alt="logo">
+          </div>
+          <div class="profile">
+            <div class="profile-top">
+             <div class="company-name">
+              <p>Loop Studios</p>
+             </div>
+            </div>
+            <h3>Software Engineer</h3>
+            <div class="profile-bottom">
+              <p>1w ago</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>FullTime</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>Worldwide</p>
+            </div>
+          </div>
+        </div>
+        <div class="right-side">
+          <div>
+            <p>Fullstack</p>
+          </div>
+          <div>
+            <p>Midweight</p>
+          </div>
+          <div>
+            <p>JavaScript</p>
+          </div>
+          <div>
+            <p>Ruby</p>
+          </div>
+          <div>
+            <p>Sass</p>
+          </div>
+        </div>
+      </div>
+      <div class="listing-card2">
+        <div class="left-side">
+          <div class="logo">
+            <img src="images/faceit.svg" alt="logo">
+          </div>
+          <div class="profile">
+            <div class="profile-top">
+             <div class="company-name">
+              <p>FaceIt</p>
+             </div>
+            </div>
+            <h3>Junior Backend Developer</h3>
+            <div class="profile-bottom">
+              <p>2w ago</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>FullTime</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>UK only</p>
+            </div>
+          </div>
+        </div>
+        <div class="right-side">
+          <div id="role">
+            <p>Backend</p>
+          </div>
+          <div id="level">
+            <p>Junior</p>
+          </div>
+          <div>
+            <p>Ruby</p>
+          </div>
+          <div>
+            <p>RoR</p>
+          </div>
+        </div>
+      </div>
+      <div class="listing-card2">
+        <div class="left-side">
+          <div class="logo">
+            <img src="images/shortly.svg" alt="logo">
+          </div>
+          <div class="profile">
+            <div class="profile-top">
+             <div class="company-name">
+              <p>Shortly</p>
+             </div>
+            </div>
+            <h3>Junior Developer</h3>
+            <div class="profile-bottom">
+              <p>2w ago</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>FullTime</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>Worldwide</p>
+            </div>
+          </div>
+        </div>
+        <div class="right-side">
+          <div id="role">
+            <p>Frontend</p>
+          </div>
+          <div>
+            <p>Junior</p>
+          </div>
+          <div>
+            <p>HTML</p>
+          </div>
+          <div>
+            <p>Javascript</p>
+          </div>
+          <div>
+            <p>Sass</p>
+          </div>
+        </div>
+      </div>
+      <div class="listing-card2">
+        <div class="left-side">
+          <div class="logo">
+            <img src="images/insure.svg" alt="logo">
+          </div>
+          <div class="profile">
+            <div class="profile-top">
+             <div class="company-name">
+              <p>Insure</p>
+             </div>
+            </div>
+            <h3>Junior Frontend Developer</h3>
+            <div class="profile-bottom">
+              <p>2w ago</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>FullTime</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>USA only</p>
+            </div>
+          </div>
+        </div>
+        <div class="right-side">
+          <div id="role">
+            <p>Frontend</p>
+          </div>
+          <div id="level">
+            <p>Junior</p>
+          </div>
+          <div>
+            <p>JavaScript</p>
+          </div>
+          <div>
+            <p>Vue</p>
+          </div>
+          <div>
+            <p>Sass</p>
+          </div>
+        </div>
+      </div>
+      <div class="listing-card2">
+        <div class="left-side">
+          <div class="logo">
+            <img src="images/eyecam-co.svg" alt="logo">
+          </div>
+          <div class="profile">
+            <div class="profile-top">
+             <div class="company-name">
+              <p>Eyecam Co.</p>
+             </div>
+            </div>
+            <h3>Full Stack Engineer</h3>
+            <div class="profile-bottom">
+              <p>3w ago</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>FullTime</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>Worldwide</p>
+            </div>
+          </div>
+        </div>
+        <div class="right-side">
+          <div id="role">
+            <p>Fullstack</p>
+          </div>
+          <div id="level">
+            <p>Midweight</p>
+          </div>
+          <div>
+            <p>JavaScript</p>
+          </div>
+          <div>
+            <p>Python</p>
+          </div>
+          <div>
+            <p>Django</p>
+          </div>
+        </div>
+      </div>
+      <div class="listing-card2">
+        <div class="left-side">
+          <div class="logo">
+            <img src="images/the-air-filter-company.svg" alt="logo">
+          </div>
+          <div class="profile">
+            <div class="profile-top">
+             <div class="company-name">
+              <p>The Air Filter Company</p>
+             </div>
+            </div>
+            <h3>Front-end Dev</h3>
+            <div class="profile-bottom">
+              <p>1mo ago</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>Part Time</p>
+              <div>
+                <span class="dot"></span>
+              </div>
+              <p>Worldwide</p>
+            </div>
+          </div>
+        </div>
+        <div class="right-side">
+          <div id="role">
+            <p>Frontend</p>
+          </div>
+          <div id="level">
+            <p>Junior</p>
+          </div>
+          <div>
+            <p>JavaScript</p>
+          </div>
+          <div>
+            <p>React</p>
+          </div>
+          <div>
+            <p>Sass</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
